--- a/Day-2/style.css
+++ b/Day-2/style.css
@@ -18,8 +18,9 @@ body{
 header{
     height: 6vw;
     margin-bottom: 1vw;
-    padding: 1vw;
+    padding: 1vw 2vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     font-size: 32px;
     font-weight: bold;
@@ -27,8 +28,8 @@ header{
 
 header p{
     width: 96vw;
+    margin: 1vw 0;
     text-align: center;
-    border-bottom: 1px solid white;
 }
 
 .container{
